tests/operator/add_bool_nil.out
[31merror[error]: unsupported operand type(s) for +: 'bool' and 'NoneType'
----- Traceback -----
  ┌─ <unknown>:1:12
  | 
1 | print(True + None)
  |             ^
[0m